--- a/Proyecto2BalzaCarrillo/nbproject/project.properties
+++ b/Proyecto2BalzaCarrillo/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto2BalzaCarrillo
 excludes=
+file.reference.javacsv.jar=/Users/nelsoncarrillo/Downloads/javacsv.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.javacsv.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
