--- a/Proyecto2BalzaCarrillo/nbproject/project.properties
+++ b/Proyecto2BalzaCarrillo/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.javacsv.jar=/Users/nelsoncarrillo/Downloads/javacsv.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javacsv.jar}
+    ${file.reference.javacsv.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
