--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /JavaApplication16/nbproject/private/
 /Proyecto2BalzaCarrillo/build/
+/PracticeABB/nbproject/private/
+/Proyecto2BalzaCarrillo/dist/
+/PracticeABB/build/
