--- a/Proyecto2BalzaCarrillo/nbproject/project.properties
+++ b/Proyecto2BalzaCarrillo/nbproject/project.properties
@@ -33,12 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto2BalzaCarrillo
 excludes=
-file.reference.javacsv.jar=/Users/nelsoncarrillo/Downloads/javacsv.jar
+file.reference.javacsv.jar=../../javacsv.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javacsv.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.javacsv.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
