--- a/Proyecto2BalzaCarrillo/nbproject/project.properties
+++ b/Proyecto2BalzaCarrillo/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Proyecto2BalzaCarrillo
+application.vendor=nelsoncarrillo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,13 @@ dist.jar=${dist.dir}/Proyecto2BalzaCarrillo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto2BalzaCarrillo
+endorsed.classpath=
 excludes=
-file.reference.javacsv.jar=../../javacsv.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javacsv.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.javacsv.jar}
+    ${libs.csvreader.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
