PUSH PLAYERO 🏖️ EMPEZANDO A HACER CHECKIN CHECKOUT

--- a/Proyecto2BalzaCarrillo/nbproject/project.properties
+++ b/Proyecto2BalzaCarrillo/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto2BalzaCarrillo
 endorsed.classpath=
 excludes=
+file.reference.javacsv.jar=C:\\Users\\tito_\\Downloads\\javacsv2.1\\javacsv.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.csvreader.classpath}
+    ${libs.csvreader.classpath}:\
+    ${file.reference.javacsv.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
