fixed el pocoton de problemas

--- a/Proyecto2BalzaCarrillo/nbproject/project.properties
+++ b/Proyecto2BalzaCarrillo/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto2BalzaCarrillo
 endorsed.classpath=
 excludes=
-file.reference.javacsv.jar=C:\\Users\\tito_\\Downloads\\javacsv2.1\\javacsv.jar
+file.reference.javacsv.jar=/Users/nelsoncarrillo/Downloads/javacsv.jar
 includes=**
 jar.compress=false
 javac.classpath=\
