CHECK IN Y CHECK OUT LISTO FALTA CHECKEAR 😊🏖️🏖️🏖️🏖️

--- a/Proyecto2BalzaCarrillo/nbproject/project.properties
+++ b/Proyecto2BalzaCarrillo/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/Proyecto2BalzaCarrillo
 endorsed.classpath=
 excludes=
 file.reference.javacsv.jar=/Users/nelsoncarrillo/Downloads/javacsv.jar
+file.reference.javacsv.jar-1=C:\\Users\\tito_\\Downloads\\javacsv2.1\\javacsv.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.csvreader.classpath}:\
-    ${file.reference.javacsv.jar}
+    ${file.reference.javacsv.jar}:\
+    ${file.reference.javacsv.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
